--- a/index.html
+++ b/index.html
@@ -19,21 +19,32 @@
         margin-right: 20px;
       }
     </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="index.js"></script>
     </head>
     <body>
     <main id="main">
     </main>
+    <form action="">
+   <div class='name '>
+     <label for="name">Username</label>
+     <input id='username' class='input input_name' type="text" >
+   </div>
+   <input type="submit" onclick="getRepositories()">
+ </form>
     <div class="flexbox-container">
+
       <div>
         <h3>Repositories</h3>
-        <div id="repositories"></div>
+        <div class="repositories" id="repositories"><ul></ul></div>
+
       </div>
       <div>
         <h3>Details</h3>
-        <div id="details"></div>
+        <div class= "details" id="details"><p></p></div>
       </div>
     </div>
-    <script src="index.js"></script>
+
     <!-- Open this file and call `mocha.run()` in console to run tests -->
     <div id="mocha"></div>
     <script src="node_modules/mocha/mocha.js"></script>
